--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="menu">
-            <img src="recipe.jpg" alt="" class="menu-img">
+            <img src="https://github.com/hamatai7109/recipe2/blob/main/recipe.jpg?raw=true" alt="" class="menu-img">
             <div class="menu-details">
                 <h2 class="menu-title">ひよこ豆とアボカドのタコス</h2>
                 <p class="menu-intro">たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
